--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1638.0",
+    "chrome-aws-lambda": "^10.1.0",
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "handlebars": "^4.7.8",
+    "html-pdf": "^3.0.1",
+    "http-status": "^1.7.4",
+    "mongoose": "^8.4.1",
+    "phantomjs-prebuilt": "^2.1.16",
+    "puppeteer-core": "^10.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/html-pdf": "^3.0.3",
     "typescript": "^5.4.5"
   }
 }
