--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "handlebars": "^4.7.8",
     "html-pdf": "^3.0.1",
+    "html-pdf-chrome": "^0.8.4",
     "http-status": "^1.7.4",
     "mongoose": "^8.4.1",
     "pdf-lib": "^1.17.1",
